Version 8.2.0
* Added the ability to retrieve events starting from a specific date and ending with a specific date. 
  Added the new methods: 
  - `IDxConnection.GetDataForPeriod(EventType eventType, string symbol, DateTime fromTime, DateTime toTime)`
  - `IDxConnection.GetDataForPeriod(EventType eventType, string symbol, DateTime fromTime, DateTime toTime, TimeSpan timeout)`
  - `IDxConnection.GetDataForPeriod(EventType eventType, string symbol, DateTime fromTime, DateTime toTime, long timout)` 
  - `IDxConnection.GetDataForPeriod(EventType eventType, string symbol, DateTime fromTime, DateTime toTime, CancellationToken cancellationToken)`
  See documentation and the dxf_simple_data_retrieving_sample 

Version 8.1.0
* [DXFC-251] Fixed a bug with receiving gap-filling data every time the user subscribed to symbols that he had already subscribed to earlier.
* [DXFC-237] Added the new order sources: `MEMX` (Members Exchange' order source), `memx` (Members Exchange' price level source)
  and `smfe` (SmallEx' price level source)

Version 8.0.1
* [DXFC-236] Fixed the ancient glitch with random garbage data in fields of removed events' (TX_REMOVE flag = 1).
* Fixed the EventFlag, IndexedEvent documentation

Version 8.0.0
* [DXFC-231] [Breaking changes] Converted the types and representations of certain event fields to store WideDecimal
  - Fields that are now of type `double`: `IDxOrderBase.Size`, `IDxOrderBase.Size`, `IDxTradeBase.Size`,
    `IDxQuote.BidSize`, `IDxQuote.AskSize`, `IDxSummary.OpenInterest`, `IDxProfile.DivFreq`,
    `IDxTimeAndSale.Size`, `IDxCandle.OpenInterest`
  - Added the `IDxOrderBase.ExecutedSize` (`double`) field which is related to FOB support
* [DXFC-215] [Breaking changes] The `IDxFundamentalListener` interface renamed to `IDxSummaryListener` and  the `OnFundamental` method renamed to `OnSummary`
* [DXFC-222] Created wrapper for PriceLevelBook.c
  - Added the `IDxPriceLevelBook`, `IDxPriceLevelBookListener` interfaces