@@ -209,6 +209,13 @@
       <Label>ToRoot</Label>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\dxfeed-api-config.sample.toml">
+      <Link>dxfeed-api-config.sample.toml</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Label>ToRoot</Label>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="Build">
     <MSBuild Projects="@(ProjectReference)"
